Added MongoDB for user activity logs, and fixed some bugs

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -690,7 +690,17 @@ dialog img {
 
 
 
+.logs-list {
+   
+    text-align: left;
+    max-height: 400px;
+    overflow-y: auto;
+}
 
+.log-item {
+  
+    margin-bottom: 10px; 
+}
 
 
 /* Search bar */
